# diamond-replay

./: .gitignore  Cargo.toml  DEBUG_MCCABE_FAILURES.md  LEARNINGS.md  README.md
.github/workflows/: ci.yml
docs/: EMERGING_STATS.md  LEGACY_STATS.md  STATISTICS.md
src/: compute.rs  error.rs  event.rs  filter.rs  lib.rs  lineup.rs  options.rs  player.rs  replay.rs  resolve.rs  score.rs  sim.rs  stat_help.rs  state.rs  stats.rs  undo.rs
src/rules/: mod.rs  no_steal_home.rs  shadow_state.rs  standard.rs  stream.rs
testdata/: 10U_Braves_Cardinals_Apr25.json  10U_Braves_Yankees.json  10U_Mariners_Brewers_Apr12.json  10U_Mariners_Cardinals.json  10U_Mets_Brewers.json  10U_Tigers_Dodgers.json  13U_Braves_Padres.json  13U_Cardinals_Braves_Apr25.json  13U_Mariners_Brewers.json  13U_Phillies_Cardinals.json  McCabe_Tigers_Angels.json  McCabe_Tigers_Mets.json  McCabe_Tigers_Reds.json  McCabe_Tigers_Yankees.json  box_scores.json  demo_10U_Mariners_Cardinals.json  demo_Mariners_Cardinals.json  mariners_vs_tigers_apr1.json  mccabe_vs_braves_apr2.expected  mccabe_vs_braves_apr2.json  stars_vs_tigers_mar31.json
tests/: integration.rs  replay_artifacts.rs
