[package]
name = "diamond-replay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stateful baseball game replay engine for scoring event streams"
repository = "https://github.com/Jud/diamond-replay"
homepage = "https://github.com/Jud/diamond-replay"
documentation = "https://docs.rs/diamond-replay"
readme = "README.md"
keywords = ["baseball", "replay", "statistics", "gamechanger", "tui"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
